--- a/src/header/HeaderNav.module.scss
+++ b/src/header/HeaderNav.module.scss
@@ -12,10 +12,14 @@
       text-align: center;
       text-decoration: none;
       color: #ffffffcc;
+
       transition: all 0.5s ease;
 
-      &:hover {
-        opacity: 0.5;
+      &.lightMode {
+        color: #455174cc;
+        &:hover {
+          opacity: 0.5;
+        }
       }
     }
   }
