--- a/src/section/Languagesection.module.scss
+++ b/src/section/Languagesection.module.scss
@@ -2,20 +2,30 @@ body {
   .section_1 {
     background-color: #222222;
     transition: all 0.5s ease;
+
     .section_1_container {
       max-width: 1440px;
       margin: 0 auto;
+      padding: 80px 0px 132px 0px;
+
       .section_1_content {
         width: 100%;
-        padding: 92px 0px 132px 0px;
+        // padding: 92px 0px 132px 0px;
         display: flex;
         justify-content: center;
+
         .LanguageNav {
+          height: 124px;
+          padding-top: 30px;
+          display: flex;
+          align-items: center;
           ul {
             display: flex;
+
             li:not(:last-child) {
               margin-right: 12px;
             }
+
             li {
               width: 161px;
               // height: 91px;
@@ -28,13 +38,24 @@ body {
               align-items: center;
               background-color: #455174;
               transition: all 0.5s ease;
+
+              &.lightMode {
+                height: 60px;
+              }
+
               img {
                 border: 8px solid #222222;
                 border-radius: 50%;
                 position: absolute;
                 top: -40%;
                 transition: all 0.5s ease;
+
+                &.lightMode {
+                  border: 1px solid #dbdbdb;
+                  top: -110%;
+                }
               }
+
               a {
                 margin-bottom: 19px;
                 font-family: 'Roboto', sans-serif;
@@ -54,6 +75,11 @@ body {
           }
         }
       }
+    }
+  }
+  .section_1 {
+    &.lightMode {
+      background-color: #dbdbdb;
     }
   }
 }
